--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -8,8 +8,11 @@ on:
     - cron: '0 2 * * *'
 
 jobs:
-  win-vcpkg:
-    runs-on: windows-latest
+  build:
+    runs-on: ${{ matrix.os }}
+    strategy:
+        matrix:
+            os: [ubuntu-latest, windows-latest, macos-latest]
     steps:
     - uses: actions/checkout@v4
       with:
@@ -23,4 +26,4 @@ jobs:
     - uses: actions/upload-artifact@v4
       with:
         name: licencpp-${{ runner.os }}
-        path: ${{ github.workspace }}/dist/licencpp.exe
+        path: ${{ github.workspace }}/dist/licencpp*
