--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -27,3 +27,66 @@ jobs:
       with:
         name: licencpp-${{ runner.os }}
         path: ${{ github.workspace }}/dist/licencpp*
+  release:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+    - name: 'Download Artifacts'
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: actions/download-artifact@v4
+      with:
+        name: licencpp-Linux
+        path: ./dist/ubuntu
+    - uses: actions/download-artifact@v4
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      with:
+        name: licencpp-Windows
+        path: ./dist/windows
+    - uses: actions/download-artifact@v4
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      with:
+        name: licencpp-macOS
+        path: ./dist/macos
+    - name: 'Create Release'
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: actions/create-release@v1
+      id: create_release
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        draft: false
+        prerelease: false
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: 'Upload Release Asset - Ubuntu'
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/ubuntu/licencpp*
+        asset_name: licencpp-Linux.zip
+        asset_content_type: application/zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: 'Upload Release Asset - Windows'
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/windows/licencpp*
+        asset_name: licencpp-Windows.zip
+        asset_content_type: application/zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: 'Upload Release Asset - MacOS'
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: actions/upload-release-asset@v1
+      with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        asset_path: ./dist/macos/licencpp*
+        asset_name: licencpp-macOS.zip
+        asset_content_type: application/zip
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
