--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -23,34 +23,43 @@ jobs:
         python -m pip install --upgrade pip setuptools wheel pyinstaller
         pip install -r requirements.txt
         pyinstaller -F ./src/licencpp.py --noconfirm
-    - uses: actions/upload-artifact@v4
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v4
       with:
         name: licencpp-${{ runner.os }}
         path: ${{ github.workspace }}/dist/licencpp*
+
   release:
     needs: build
     runs-on: ubuntu-latest
     steps:
-    - name: 'Download Artifacts'
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    - name: 'Download Artifacts - Ubuntu'
+      #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: actions/download-artifact@v4
       with:
         name: licencpp-Linux
         path: ./dist/ubuntu
-    - uses: actions/download-artifact@v4
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    - name: 'Download Artifacts - Windows'
+      #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: actions/download-artifact@v4
       with:
         name: licencpp-Windows
         path: ./dist/windows
-    - uses: actions/download-artifact@v4
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+    - name: 'Download Artifacts - MacOS'
+      #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      uses: actions/download-artifact@v4
       with:
         name: licencpp-macOS
         path: ./dist/macos
+    - name: 'List files in dist directory (Linux/macOS)'
+      #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      run: |
+        echo "Listing files in dist directory:"
+        find ./dist
     - name: 'Create Release'
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-      uses: actions/create-release@v1
+      #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       id: create_release
+      uses: actions/create-release@v1
       with:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
@@ -59,7 +68,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: 'Upload Release Asset - Ubuntu'
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -68,9 +77,8 @@ jobs:
         asset_content_type: application/zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
     - name: 'Upload Release Asset - Windows'
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
@@ -79,9 +87,8 @@ jobs:
         asset_content_type: application/zip
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
     - name: 'Upload Release Asset - MacOS'
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      #if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
