--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -67,12 +67,18 @@ jobs:
         prerelease: false
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Zip artifacts
+      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
+      run: |
+        zip --junk-paths ${{ github.workspace }}/dist/licencpp-Linux.zip ${{ github.workspace }}/dist/ubuntu/licencpp
+        zip --junk-paths ${{ github.workspace }}/dist/licencpp-Windows.zip ${{ github.workspace }}/dist/windows/licencpp.exe
+        zip --junk-paths ${{ github.workspace }}/dist/licencpp-macOS.zip ${{ github.workspace }}/dist/macos/licencpp
     - name: 'Upload Release Asset - Ubuntu'
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/dist/ubuntu/licencpp
+        asset_path: ${{ github.workspace }}/dist/licencpp-Linux.zip
         asset_name: licencpp-Linux.zip
         asset_content_type: application/zip
       env:
@@ -82,7 +88,7 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/dist/windows/licencpp.exe
+        asset_path: ${{ github.workspace }}/dist/licencpp-Windows.zip
         asset_name: licencpp-Windows.zip
         asset_content_type: application/zip
       env:
@@ -92,7 +98,7 @@ jobs:
       uses: actions/upload-release-asset@v1
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ${{ github.workspace }}/dist/macos/licencpp
+        asset_path: ${{ github.workspace }}/dist/licencpp-macOS.zip
         asset_name: licencpp-macOS.zip
         asset_content_type: application/zip
       env:
